--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,15 @@
-aiohttp==3.8.4
-aiosignal==1.3.1
-async-timeout==4.0.2
-attrs==22.2.0
-certifi==2022.12.7
-charset-normalizer==3.1.0
-dataclasses-json==0.5.7
-frozenlist==1.3.3
-greenlet==2.0.2
-idna==3.4
-langchain==0.0.134
-marshmallow==3.19.0
-marshmallow-enum==1.5.1
-multidict==6.0.4
-mypy-extensions==1.0.0
-numpy==1.24.2
-openai==0.27.4
-openapi-schema-pydantic==1.2.4
-packaging==23.0
-pydantic==1.10.7
-PyYAML==6.0
-requests==2.28.2
-SQLAlchemy==1.4.47
-tenacity==8.2.2
-tqdm==4.65.0
-typing-inspect==0.8.0
-typing_extensions==4.5.0
-urllib3==1.26.15
-yarl==1.8.2
+annotated-types==0.6.0
+anyio==4.2.0
+certifi==2023.11.17
+distro==1.8.0
+exceptiongroup==1.2.0
+h11==0.14.0
+httpcore==1.0.2
+httpx==0.26.0
+idna==3.6
+openai==1.6.1
+pydantic==2.5.3
+pydantic_core==2.14.6
+sniffio==1.3.0
+tqdm==4.66.1
+typing_extensions==4.9.0
