--- a/requirements.txt
+++ b/requirements.txt
@@ -10,10 +10,12 @@ charset-normalizer==3.3.2
 dataclasses-json==0.6.3
 dill==0.3.7
 distro==1.8.0
+docarray==0.40.0
 exceptiongroup==1.2.0
 frozenlist==1.4.1
 greenlet==3.0.3
 h11==0.14.0
+hnswlib==0.8.0
 httpcore==1.0.2
 httpx==0.26.0
 idna==3.6
@@ -25,28 +27,37 @@ langchain==0.0.352
 langchain-community==0.0.6
 langchain-core==0.1.3
 langsmith==0.0.74
+markdown-it-py==3.0.0
 marshmallow==3.20.1
 mccabe==0.7.0
+mdurl==0.1.2
 multidict==6.0.4
 mypy-extensions==1.0.0
 numpy==1.26.2
 openai==1.6.1
+orjson==3.9.10
 packaging==23.2
 platformdirs==4.1.0
 pluggy==1.3.0
+protobuf==4.25.1
 pydantic==2.5.3
 pydantic_core==2.14.6
 pygame==2.5.2
+Pygments==2.17.2
 pylint==3.0.3
 pytest==7.4.3
 PyYAML==6.0.1
+regex==2023.12.25
 requests==2.31.0
+rich==13.7.0
 sniffio==1.3.0
 SQLAlchemy==2.0.23
 tenacity==8.2.3
+tiktoken==0.5.2
 tomli==2.0.1
 tomlkit==0.12.3
 tqdm==4.66.1
+types-requests==2.31.0.10
 typing-inspect==0.9.0
 typing_extensions==4.9.0
 urllib3==2.1.0
