--- a/examples/modern_romeo_and_juliet.yaml
+++ b/examples/modern_romeo_and_juliet.yaml
@@ -1,4 +1,6 @@
-description: This is the balcony scene similiar to 'Romeo and Juliet' by William Shakespeare but in 2023
+description: >
+  This is the balcony scene similiar to 'Romeo and Juliet' by William Shakespeare but in 2023.
+  Do not say more than 4 sentences.
 persons:
 - name: Romeo
   prompt: You are Romeo but more like a gangsta rapper, you speak short and precise. You want a date with Juliet.
