--- a/requirements.txt
+++ b/requirements.txt
@@ -46,6 +46,7 @@ pygame==2.5.2
 Pygments==2.17.2
 pylint==3.0.3
 pytest==7.4.3
+pytest-mock==3.12.0
 PyYAML==6.0.1
 regex==2023.12.25
 requests==2.31.0
