--- a/requirements.txt
+++ b/requirements.txt
@@ -23,10 +23,12 @@ iniconfig==2.0.0
 isort==5.13.2
 jsonpatch==1.33
 jsonpointer==2.4
-langchain==0.0.352
-langchain-community==0.0.6
-langchain-core==0.1.3
-langsmith==0.0.74
+langchain==0.1.14
+langchain-community==0.0.31
+langchain-core==0.1.40
+langchain-openai==0.1.1
+langchain-text-splitters==0.0.1
+langsmith==0.1.40
 markdown-it-py==3.0.0
 marshmallow==3.20.1
 mccabe==0.7.0
@@ -34,14 +36,14 @@ mdurl==0.1.2
 multidict==6.0.4
 mypy-extensions==1.0.0
 numpy==1.26.2
-openai==1.6.1
-orjson==3.9.10
+openai==1.16.1
+orjson==3.10.0
 packaging==23.2
 platformdirs==4.1.0
 pluggy==1.3.0
 protobuf==4.25.1
-pydantic==2.5.3
-pydantic_core==2.14.6
+pydantic==2.6.4
+pydantic_core==2.16.3
 pygame==2.5.2
 Pygments==2.17.2
 pylint==3.0.3
