--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "pytest-mock>=3.14.1",
     "pyyaml>=6.0.2",
 ]
+requires-python = ">=3.12"
 
 [tool.pytest.ini_options]
 addopts = [
