feat: Add Ruff for code formatting
- Add `ruff` to `pyproject.toml`
- Add a `format` target to `justfile`
- Format the entire project with `ruff`

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "pytest>=8.4.1",
     "pytest-mock>=3.14.1",
     "pyyaml>=6.0.2",
+    "ruff>=0.5.5",
 ]
 requires-python = ">=3.12"
 
