--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "langchain-openai>=0.3.24",
     "openai>=1.88.0",
     "pydantic>=2.11.7",
+    "pydantic-ai>=0.3.4",
     "pygame>=2.6.1",
     "pylint>=3.3.7",
     "pytest>=8.4.1",
