--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
     "pytest>=8.4.1",
     "pytest-mock>=3.14.1",
     "pyyaml>=6.0.2",
+    "feedparser>=6.0.11",
     "ruff>=0.5.5",
 ]
 requires-python = ">=3.12"
